svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sarthak-app
  namespace: sarthak
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: sarthak-app
